Fix desktop header alignments by removing negative margins

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -78,7 +78,6 @@
   display: flex;
   align-items: center;
   gap: 25px;
-  margin-right: -30px;
 }
 
 .nav-item {
@@ -110,7 +109,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: -70px;
 }
 
 .register-btn:hover {
